--- a/MovieWebsite/src/main/resources/application.properties
+++ b/MovieWebsite/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/show
-spring.datasource.username=postgrestest
+spring.datasource.url=jdbc:postgresql://localhost:5432/MovieWebsite
+spring.datasource.username=postgres
 spring.datasource.password=postgrestest
