--- a/MovieWebsite/src/main/resources/application.properties
+++ b/MovieWebsite/src/main/resources/application.properties
@@ -1,8 +1,4 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-<<<<<<< HEAD
-spring.datasource.url=jdbc:postgresql://localhost:5432/show
-=======
-spring.datasource.url=jdbc:postgresql://localhost:5432/MovieWebsite
->>>>>>> branch 'master' of https://github.com/Tokin-no-osohaya/Group-Work.git
+spring.datasource.url=jdbc:postgresql://localhost:5432/movie_website
 spring.datasource.username=postgres
 spring.datasource.password=postgrestest
